--- a/MojangSharp/MojangSharp.csproj
+++ b/MojangSharp/MojangSharp.csproj
@@ -46,8 +46,10 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="Exceptions\UUID.cs" />
+    <Compile Include="Profile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Status.cs" />
+    <Compile Include="Username.cs" />
     <Compile Include="UUID.cs" />
   </ItemGroup>
   <ItemGroup>
